@@ -2861,3 +2861,4 @@
 ( cvs diff -u -r 1.382.2.407 -r 1.382.2.408 src/compose.c;  ) > 3.0.0cvs13.patchset
 ( cvs diff -u -r 1.207.2.181 -r 1.207.2.182 src/folderview.c;  cvs diff -u -r 1.115.2.166 -r 1.115.2.167 src/main.c;  cvs diff -u -r 1.274.2.210 -r 1.274.2.211 src/mainwindow.c;  ) > 3.0.0cvs14.patchset
 ( cvs diff -u -r 1.59.2.57 -r 1.59.2.58 src/prefs_filtering.c;  cvs diff -u -r 1.6.2.7 -r 1.6.2.8 src/prefs_filtering.h;  cvs diff -u -r 1.1.4.39 -r 1.1.4.40 src/prefs_filtering_action.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/common/tags.c;  ) > 3.0.0cvs15.patchset
+( cvs diff -u -r 1.61.2.68 -r 1.61.2.69 src/account.c;  cvs diff -u -r 1.382.2.408 -r 1.382.2.409 src/compose.c;  cvs diff -u -r 1.105.2.109 -r 1.105.2.110 src/prefs_account.c;  cvs diff -u -r 1.49.2.33 -r 1.49.2.34 src/prefs_account.h;  cvs diff -u -r 1.12.2.47 -r 1.12.2.48 src/prefs_template.c;  cvs diff -u -r 1.36.2.110 -r 1.36.2.111 src/common/utils.c;  ) > 3.0.0cvs16.patchset
