@@ -1,3 +1,14 @@
+2007-09-16 [colin]	3.0.0cvs16
+
+	* src/account.c
+	* src/compose.c
+	* src/prefs_account.c
+	* src/prefs_account.h
+	* src/prefs_template.c
+	* src/common/utils.c
+		Remove Generate Message-ID option. We need
+		this on some IMAP servers.
+
 2007-09-16 [colin]	3.0.0cvs15
 
 	* src/prefs_filtering.c
